assets/sass/v2/shared/_header.scss
header.page-header {
  background-color: #333;

  @include mobile-mq {
    .page-header-inner {
      padding-top: 10px;
    }
  }

  .logo {
    display: block;
    float: left;
    border-left: 2px solid $white;

    a {
      text-decoration: none;
    }

    img {
      margin: 0 10px;
      width: 40px;
    }

    .full-name,
    .short-name {
      @extend %large-heading;
      vertical-align: bottom;
      color: $white;
      font-weight: normal;
      line-height: 40px;

      @include mobile-mq {
        &.short-name {
          display: inline;
        }
        &.full-name {
          display: none;
        }
      }
    }

    .short-name {
      display: none;
    }

    .mobile-menu {
      display: none;

      @include mobile-mq {
        position: absolute;
        display: block;
        width: 40px;
        height: 40px;
        right: 20px;
        top: 10px;
        z-index: 1000;
        background-image: url('../../../assets/images/3-bar-menu.png');
        background-size: 40px 40px;
        cursor: pointer;
      }
    }
  }

  .search {
    .search-inner {
      position: relative;
    }

    input[type="text"] {
      @extend %small-copy;
      width: 100%;
      padding: 5px;
    }

    input[type="submit"] {
      position: absolute;
      right: 0;
      top: 0;
      bottom: 0;
      border: none;
      background-color: #666;
      padding: 5px 10px;
    }

    @include mobile-mq {
      .content-homepage {
        display: none;
      }

      .search-inner {
        margin-top: 6px;
        margin-right: 50px;
      }
    }
  }
}

